--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
     "mammoth": "^1.6.0",
+    "openai": "^4.55.0",
     "ora": "^5.4.1"
   },
   "keywords": [
