dev 2.3 完成了结构化方案

--- a/config/env.yaml.example
+++ b/config/env.yaml.example
@@ -21,6 +21,20 @@ directories:
   temp_dir: "./data/temp"
   candidate_tools_dir: "./sourcefiles"
 
+# 处理模式配置
+processing:
+  default_mode: "structured"           # classic | structured
+  allow_fallback: true                  # 结构化失败是否回退经典
+  fallback_mode: "classic"             # 失败回退目标
+
+# 结构化模式配置
+structured:
+  prompts_root: "./prompts/StructuredFileProcessor"
+  default_prompt_version: "Version1"
+  max_repair_attempts: 2                # JSON纠错回合上限（0-3）
+  force_json_response: false            # 若provider支持，可强制json模式（保留为false）
+  schema_path: "./schemas/rows.schema.json"
+
 # 并发控制
 concurrency:
   max_concurrent_requests: 30
