dev 2.4 增补配置文件结构

--- a/config/env.yaml.example
+++ b/config/env.yaml.example
@@ -15,6 +15,10 @@ providers:
       - "another-model"
 
 # 目录配置
+# - input_dir: 默认输入根目录
+# - output_dir: 默认输出根目录
+# - temp_dir: 临时产物根目录（中间文件、日志等）
+# - candidate_tools_dir: 其他资源目录（不影响本流程）
 directories:
   input_dir: "./data/input"
   output_dir: "./data/output"
@@ -36,16 +40,23 @@ structured:
   schema_path: "./schemas/rows.schema.json"
 
 # 并发控制
+# - max_concurrent_requests: 同时并发的请求数（受API与网络限制）
 concurrency:
   max_concurrent_requests: 30
 
 # 校验配置
+# - enable_multiple_requests: 是否对同一文件多次采样
+# - request_count: 采样次数
+# - similarity_threshold: 多样本语义相似度阈值（0.0-1.0）
 validation:
   enable_multiple_requests: true
   request_count: 3
   similarity_threshold: 0.8
 
 # 自动重试配置
+# - enable_auto_retry: 开启自动重试
+# - max_retry_count: 最大重试次数
+# - retry_delay_ms: 重试间隔（毫秒）
 retry:
   enable_auto_retry: true
   max_retry_count: 3
@@ -57,16 +68,22 @@ retry:
     - "network_error"
 
 # Token统计配置
+# - enable_token_counting: 是否启用token统计
+# - show_detailed_stats: 控制台展示详细统计
+# - save_token_logs: 是否保存日志到文件
+# - log_file: token日志文件路径
 token_tracking:
   enable_token_counting: true
   show_detailed_stats: true
   save_token_logs: true
   log_file: "./data/logs/token_usage.log"
 
-# 系统提示词文件路径
+# 系统提示词文件路径（classic模式使用）
 system_prompt_file: "./prompts/Prompt.txt"
 
 # 网络超时配置
+# - connect_timeout_ms: 连接握手超时（毫秒）
+# - response_timeout_ms: 响应等待超时（毫秒）
 network:
   connect_timeout_ms: 3000
   response_timeout_ms: 60000
