--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "boxen": "^5.1.2",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
+    "exceljs": "^4.4.0",
     "gradient-string": "^2.0.2",
     "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
